--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "react-end-term-project",
+  "name": "cinestream-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "firebase": "^12.6.0",
+    "zustand": "^5.0.9",
+    "react": "^19.2.1",
+    "react-router-dom": "^7.10.1",
+    "react-dom": "^19.2.1",
+    "lucide-react": "^0.559.0",
+    "i18next": "^25.7.2",
+    "react-i18next": "^16.4.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
